fixed letter spacing in onboarding svg

--- a/assets/css/generic.css
+++ b/assets/css/generic.css
@@ -19,7 +19,6 @@ html{
 body{ 
   margin: 0;
   padding:  0;
-  letter-spacing: 1px;
   width: 100%;
   height: 100%;
   font-size: 18px;
